--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,7 @@ body{
   font-size: 16px;
   margin: 1.2em;
   background-image: url("../images/pigeon-background.JPEG");
+  background-repeat: no-repeat;
   background-color: #DDDDDD;
   background-size: cover ;
   background-position: center;
@@ -38,7 +39,7 @@ body{
 }
 
 h1{
-  color: #c12258;
+  color: #B21F50;
   font-size: 2em;
 
   /*Req 2*/
