--- a/css/style.css
+++ b/css/style.css
@@ -38,14 +38,7 @@ body{
   font-family: 'Andika', sans-serif;
 }
 
-h1{
-  color: #B21F50;
-  font-size: 2em;
 
-  /*Req 2*/
-  text-align: center;
-  line-height: 2em;
-}
 
 p{
   /*Req 3*/
@@ -66,17 +59,13 @@ p{
 /*Req 6a*/
 td, th {
   text-align: center;
-  border-top: 2px #000000;
   padding: 10px;
-  border-left: 2px solid #000000;
-  border-top: 2px solid #000000;
 }
 
 th {
   border-top: none;
+  border-right: none;
 }
-
-
 
 /*Req 6d*/
 tr:nth-child(odd) {
@@ -113,14 +102,40 @@ table{
   text-transform: uppercase;
   vertical-align: middle;
 }
+
 /*Req 6c*/
 .rowhead{
   border-width: 2px;
   border-color: #000000;
+  border-style: solid;
+  border-left: none;
+  border-bottom: none;
 }
 
 thead tr:first-child th:first-child{
+  border-bottom: 2px #000000;
+  border-top-left-radius: 10px;
+}
+
+thead tr:first-child th:last-child{
+  border-top-right-radius: 10px;
+}
+
+tbody tr:last-child th:first-child{
+  border-bottom-left-radius: 10px;
+}
+
+tbody tr:last-child td:last-child{
+  border-bottom-right-radius: 10px;
+}
+
+td {
+  border-width: 2px;
+  border-color: #000000;
+  border-style: solid;
   border-left: none;
+  border-right: none;
+  border-bottom: none;
 }
 
 /*Add selectors and rules here*/
@@ -138,10 +153,19 @@ footer{
   left: 0;
 }
 
+h1{
+  color: #B21F50;
+  font-size: 2em;
+
+  /*Req 2*/
+  text-align: center;
+  line-height: 2em;
+}
+
 a{
   /*Req 4*/
   font-size: 16px;
-  color: #B92751;
+  color: #B21F50;
   text-decoration-line: underline;
   text-decoration-style: wavy;
 }
