--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*STARTER CODE*/
 
 /*
-We have started some of the selectors for you.
+We have started some of the selectors for you
 For others we have provided hints on what the selectors should be.
 There are some missing selectors.
 
